fix: tiles text spacing

--- a/container.css
+++ b/container.css
@@ -36,10 +36,11 @@
     color: white;
 }
 .tile p{
-    padding: 3%;
+    padding: 5%;
     position: absolute;
     top: 20%;
     left: 5%;
+    right: 5%;
     font-size: 1rem;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
